--- a/gb/20/1/4/n11768440.md
+++ b/gb/20/1/4/n11768440.md
@@ -1,21 +1,21 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xdbxou357/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xdbxou357/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xdbxou357/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xdbxou357/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xdbxou357/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xdbxou357/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xdbxou357/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【货币市场】新年伊始 美元对多国货币走强</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/A51G6450-600x400.jpg" />
 <h6>在美东时间2020年1月3日北美交易时段，澳元对美元价格从年前的0.70美元以上高位滑落，美元相对强于英镑和欧元。（陈明／大纪元）
 </h6>
 <hr>
-<p>【大纪元2020年01月05日讯】（大纪元记者张威廉澳洲墨尔本报导）<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E8%B4%A7%E5%B8%81%E5%B8%82%E5%9C%BA.md#1">货币市场</a>在过去一周相对平静，在周五（美东时间1月3日）北美交易时段，<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>对<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BE%8E%E5%85%83.md#1">美元</a>价格从年前的0.70美元以上高位滑落，美元相对强于英镑和欧元，美元彭博现货指数收于96.838点，略低于一周前的收盘指数96.919点。</p>
-<p>在周五欧美市场交易时段，美国十年期国债收益率下跌0.07%达到1.79%﹔英国十年期国债收益率下跌0.05%达到0.74%﹔黄金期货价格上涨1.3%达到每盎司1548.64<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BE%8E%E5%85%83.md#1">美元</a>﹔WTI原油价格上涨3%达到每桶63.01美元。</p>
-<h2>过去一周<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E8%B4%A7%E5%B8%81%E5%B8%82%E5%9C%BA.md#1">货币市场</a></h2>
-<p>BK资产管理公司林（Kathy Lien）的分析报告说，随着一月份的开始，获利了结已成为货币市场的主题。由于地缘政治紧张局势重现和<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>数据疲软，所有主要货币在周五已经是连续第二天大幅走低。</p>
-<p>根据最新数据，美国制造业活力以十多年来的最快速度收缩。美联储FOMC会议备忘录显示，美联储基准利率将长期维持低位，德国失业率上升幅度超出预期。然而，令投资者最紧张的是美国与<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97.md#1">伊朗</a>的关系。美国总统川普证实，伊朗一位高级军事指挥官被美国空袭击毙，伊朗可能对美国进行报复。</p>
-<p><ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>和新西兰元周五跌幅最大，英镑也弱于美元，美元对日元价格也有所下跌。</p>
+<p>【大纪元2020年01月05日讯】（大纪元记者张威廉澳洲墨尔本报导）<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%A7%E5%B8%81%E5%B8%82%E5%9C%BA.md#1">货币市场</a>在过去一周相对平静，在周五（美东时间1月3日）北美交易时段，<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>对<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%85%83.md#1">美元</a>价格从年前的0.70美元以上高位滑落，美元相对强于英镑和欧元，美元彭博现货指数收于96.838点，略低于一周前的收盘指数96.919点。</p>
+<p>在周五欧美市场交易时段，美国十年期国债收益率下跌0.07%达到1.79%﹔英国十年期国债收益率下跌0.05%达到0.74%﹔黄金期货价格上涨1.3%达到每盎司1548.64<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BE%8E%E5%85%83.md#1">美元</a>﹔WTI原油价格上涨3%达到每桶63.01美元。</p>
+<h2>过去一周<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%B4%A7%E5%B8%81%E5%B8%82%E5%9C%BA.md#1">货币市场</a></h2>
+<p>BK资产管理公司林（Kathy Lien）的分析报告说，随着一月份的开始，获利了结已成为货币市场的主题。由于地缘政治紧张局势重现和<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>数据疲软，所有主要货币在周五已经是连续第二天大幅走低。</p>
+<p>根据最新数据，美国制造业活力以十多年来的最快速度收缩。美联储FOMC会议备忘录显示，美联储基准利率将长期维持低位，德国失业率上升幅度超出预期。然而，令投资者最紧张的是美国与<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97.md#1">伊朗</a>的关系。美国总统川普证实，伊朗一位高级军事指挥官被美国空袭击毙，伊朗可能对美国进行报复。</p>
+<p><ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E6%BE%B3%E5%85%83.md#1">澳元</a>和新西兰元周五跌幅最大，英镑也弱于美元，美元对日元价格也有所下跌。</p>
 <h2>未来一周的货币市场</h2>
 <p>展望2020年外汇交易的第一周，这将是繁忙的一周。除了地缘政治风险外，投资者还将关注美国和加拿大的劳动力市场报告、澳洲PMI指数以及德国和英国的贸易数据。</p>
 <p>美国非农就业数据以及加拿大的IVEY PMI指数和就业数据将成为货币市场的主要风向标，因为投资者将试图预测美联储和加拿大中央银行货币政策的下一步举措。</p>
-<p>两家央行都表示，他们对在未来维持利率不变感到满意，但近期数据疲弱，市场担心失望情绪的加深可能会促使这两家央行在2020年放松利率。尽管其它<ahref="https://github.com/xdbxou357/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>体中央银行在2019年降低利率，但加拿大央行坚持利率不变。考虑到加拿大央行的基准利率维持在1.75%，它有足够的降息空间。</p>
+<p>两家央行都表示，他们对在未来维持利率不变感到满意，但近期数据疲弱，市场担心失望情绪的加深可能会促使这两家央行在2020年放松利率。尽管其它<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E7%BB%8F%E6%B5%8E.md#1">经济</a>体中央银行在2019年降低利率，但加拿大央行坚持利率不变。考虑到加拿大央行的基准利率维持在1.75%，它有足够的降息空间。</p>
 <p>如果十二月份制造业活力放缓，而且就业增长未能像经济学家预期的那样得到恢复，那么市场可能会看到美元对加元价格在年初强劲反弹。在2019年十一月份，加拿大失去7万多份就业，经济学家们预测12月份将增加3万多个就业机会。</p>
 <h2>美元</h2>
 <p>即将公布的美国非农就业数增长速度可能在十二月份放缓，十一月份的非农就业数增幅超过预期，并且随着零售业需求的缓和、以及制造业活力的放缓，非农就业数可能会在十二月份回落。话虽如此，美国股市一直非常强劲，黑色星期五的销售状况良好，因此就业增长可能不会像经济学家们预期的那样回落。</p>
@@ -31,42 +31,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/12/15/n11723709.md#1">【货币市场】美中达阶段协议 汇市反应平静</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/12/20/n11736032.md#1">大陆国资系进民营银行 坏帐激增恐继续恶化</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/12/21/n11737070.md#1">成功者：分享房地产投资秘笈</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/12/21/n11737087.md#1">【货币市场】 美股创历史最高 美元强势</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/12/28/n11751364.md#1">【货币市场】纳斯达克创新高 高风险货币走强</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/4/n12305067.md#1">维州封锁升级 心理健康危机加重</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/4/n12304731.md#1">维州四级封锁限制 恐导致澳洲食品供应短缺</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/3/7/n11922895.md#1">中共病毒：维州提高罚款 上班需许可证 联邦发补助</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/4/n12304905.md#1">墨尔本95岁老人染疫 幸免于难充满希望</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/4/n12304772.md#1">维州疫情肆虐 一线医务承受能力近极限</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/15/n11723709.md#1">【货币市场】美中达阶段协议 汇市反应平静</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/20/n11736032.md#1">大陆国资系进民营银行 坏帐激增恐继续恶化</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/21/n11737070.md#1">成功者：分享房地产投资秘笈</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/21/n11737087.md#1">【货币市场】 美股创历史最高 美元强势</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/12/28/n11751364.md#1">【货币市场】纳斯达克创新高 高风险货币走强</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690233.md#1">【一线采访】中共文革式防疫 上海民怨沸腾</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690439.md#1">无家可归男子为挣200元 冒充他人打疫苗被控欺骗</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690430.md#1">F1赛事四月重回墨尔本 观众数或近创纪录水平</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/2/n13690407.md#1">2021年NAPLAN成绩 维州百所最佳学校出炉</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增9149例病毒感染 新州新增20389例</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/15/n11590692.md#1" target="_blank">林辉：一个曾给毛献花女孩对父亲的忏悔</a></li><li><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/6/n10461502.md#1" target="_blank">四位中国军医的人生奇遇</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/11/n10208093.md#1" target="_blank">古玉文：消灭私有制不是出路（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/5/25/n7929122.md#1" target="_blank">九十五岁老人对法轮大法的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12302287.md#1">刘鹤公开羞辱李克强？ 央视视频火爆流传</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/30/n12295728.md#1">【独家】中共监控“流氓化”：家中偷窥你</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301758.md#1">录综艺节目累到脱妆 黄晓明真实相貌引热议</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301683.md#1">中共核专家打脸胡锡进 批其恶意炒作涉核问题</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12302226.md#1">【翻墙必看】“老大哥”藏在大陆人家中监视</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301702.md#1">景甜承认割双眼皮失败 直播中自嘲整成悲伤蛙</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/2/n12301510.md#1">唐嫣产后首次公开亮相 亲口澄清宝宝性别</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12304220.md#1">“战狼”吴京主演 中共高调开拍反美片引嘲讽</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12304444.md#1">59岁台湾艺人罗霈颖猝逝 死因待查</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/3/n12304056.md#1">北京下豪雨和冰雹 谢霆锋怨自家菜园受灾</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/6/4/n12162213.md#1">【康熙大帝】康熙晚年与雍正嗣位</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/21/n12271399.md#1">【医案】迷迷红尘路</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/8/1/n12299280.md#1">《地仙传说》之王喜外传（六）</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/24/n12279753.md#1">落榜士子痛骂考官  因何转运金榜题名？</a></li>
-<li><a href="https://github.com/xdbxou357/djy/blob/master/gb/20/7/31/n12298031.md#1">散文：我的父亲母亲</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689405.md#1">【财商天下】水泥地种粮食 中国复耕“大跃进”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689428.md#1">【军事热点】美国新国防战略 中共位居威胁之首</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686756.md#1">巨星布鲁斯威利患失语症 医：警惕2大原因</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xdbxou357/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xdbxou357/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11768440.htm">【货币市场】新年伊始 美元对多国货币走强</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/4/n11768440.htm">【货币市场】新年伊始 美元对多国货币走强</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/xdbxou357/djy/blob/master/gb/20/1/4/n11768440.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xdbxou357/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xdbxou357/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xdbxou357/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xdbxou357/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/20/1/4/n11768440.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
